# FPVBattleStats

./: .env.example  .gitignore  AGENTS.md  README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py
backend/app/db/: bootstrap.py
backend/app/schemas/: analytics.py  common.py  scoreboard.py
backend/app/services/: analytics_service.py
backend/tests/: test_analytics_service.py  test_smoke.py
docs/: original-request.cleaned.md  railway-deployment.md  statistics_rework_v1.md  statistics_rework_v2
frontend/: index.html  package-lock.json  package.json
frontend/scripts/: serve.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: PilotHoverCard.tsx  PilotSelector.tsx  RangeQuickFilters.tsx  ScoreboardTable.tsx  StreakBoard.tsx  TrendChart.tsx
frontend/src/hooks/: useApi.ts
railway/: backend-start.sh  scraper-sync-current.sh  scraper-sync-historical.sh
scraper/: __init__.py
scraper/app/: __init__.py  domain.py  logging.py
scraper/tests/: test_config.py  test_logging.py  test_parser_html_sections.py  test_parser_json.py  test_parser_smoke.py
scripts/: copy_sqlite_to_postgres.py
shared/python/: pyproject.toml
shared/python/fpvbattle_core/: __init__.py
shared/python/fpvbattle_core/db/: models.py  session.py
shared/python/fpvbattle_core/domain/: enums.py
shared/python/fpvbattle_core/repositories/: base.py  day_specs.py  pilots.py  results.py  season_leaderboard.py
shared/python/fpvbattle_core/services/: unit_of_work.py
(+17 files in other folders)
