[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpvbattle-core"
version = "0.1.0"
description = "Shared database and domain package for FPVBattle Stats."
requires-python = ">=3.12"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["fpvbattle_core*"]
